file url fix attempt
java script not loading due to wrongly written file url, it's now using `./`

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="keywords" content="portfolio, artist, animator, cybersecurity analyst, developer">
     <meta name="author" content="dinnoyow">
     <title>Home - dinnoyow</title>
-    <link rel="stylesheet" href="css-files/custom-bs.css">
-    <link rel="stylesheet" href="css-files/theme.css">
-    <link rel="stylesheet" href="node_modules/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./css-files/custom-bs.css">
+    <link rel="stylesheet" href="./css-files/theme.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body class="vh-100 d-flex flex-column">
     <video src="assets/opening-video.mp4" autoplay muted loop class="w-100 h-100 object-fit-cover" style="z-index: -1; position: absolute;"></video>
@@ -72,6 +72,7 @@
                 <div class="col text-start text-secondary">
                     <span class="small p-1">Built with:</span>
                     <a href="https://getbootstrap.com/" target="_blank" class="p-1 text-secondary"><span class="bi bi-bootstrap"></span></a>
+                    <a href="#" class="p-1 text-secondary"><span class="bi bi-css"></span></a>
                 </div>
                 <div class="col text-end text-secondary">
                     <a href="https://github.com/dinnoyow" target="_blank" class="p-1 text-secondary"><span class="bi bi-github"></span></a>
@@ -82,6 +83,6 @@
             </div>
         </div>
     </footer>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
