--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="container py-2 text-center text-md-start">
             <nav class="navbar navbar-expand-md justify-content-center justify-content-md-start">
-                <a href="#" class="navbar-brand">
+                <a href="#" class="navbar-brand" onclick="show('home')">
                     <img src="assets/logo-signature.png" alt="dinnoyow signature logo" style="width: 2em;">
                 </a>
                 <a 
@@ -30,10 +30,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </a>
                 <div id="collapsed" class="collapse navbar-collapse justify-content-end">
-                    <ul class="navbar-nav p-2">
-                        <li class="navbar-item"><a id="home-button" href="#" class="nav-link active" onclick="show('home')">Home</a></li>
-                        <li class="navbar-item"><a id="about-button" href="#" class="nav-link" onclick="show('about')">About</a></li>
-                        <li class="navbar-item"><a id="gallery-button" href="#" class="nav-link" onclick="show('gallery')">Gallery</a></li>
+                    <ul class="navbar-nav navbar-expand p-2">
+                        <li class="navbar-item"><a id="home-button" href="#home" class="nav-link active" onclick="show('home')">Home</a></li>
+                        <li class="navbar-item"><a id="about-button" href="#about" class="nav-link" onclick="show('about')">About</a></li>
+                        <li class="navbar-item"><a id="gallery-button" href="#gallery" class="nav-link" onclick="show('gallery')">Gallery</a></li>
                         <li class="navbar-item dropdown">
                             <a 
                             href="#" 
@@ -55,32 +55,45 @@
             </nav>
         </div>
     </header>
-
-    <main class="flex-fill cprimary primary bg z-0 py-3 overflow-y-auto overflow-x-hidden" id="main-content">
+    <div id="top"></div>
+    <main class="flex-fill cprimary primary bg z-0 py-0 overflow-y-auto overflow-x-hidden" id="main-content">
         <div class="container h-100" id="home">
             <div class="row align-items-center h-100 row-cols-1 row-cols-md-2">
-                <div class="col text-center text-md-start">
+                <div class="col text-center text-md-start d-md-flex flex-md-row">
                     <div>
-                        <h1 class="fw-bolder">Welcome.</h1>
-                        <p>This is a simple description about this testing website.</p>
+                        <h1 class="fw-bolder">Hi, I'm dinnoyow.</h1>
+                        <p>I'm an artist and a developer, and you're now on my website. You can find <a href="#about" onclick="show('about')">my thoughts</a>, <a href="#gallery" onclick="show('gallery')">my art and animations</a>, and <a href="#leafboard" onclick="show('leafboard')">my projects</a> in this website.</p>
+                        <div class="social-medias"></div>
                     </div>
+                    <div class="d-none d-md-block p-lg-5"></div>
                 </div>
-                <div class="col text-center text-md-start d-none d-md-block">
-
-                </div>
+                <div class="col text-center text-md-start d-none d-md-block"></div>
             </div>
         </div>
         <div class="container h-100" id="about">
             <div class="row align-items-center h-100">
-                <div class="col text-center text-md-start">
+                <div class="col text-center text-md-start d-md-flex flex-md-row">
+                    <div>
+                        <h1 class="fw-bolder">About Page.</h1>
+                        <p>Here you'll find me talk about <a href="#myself">myself</a>, my views, artificial intelligence, and education.</p>
+                    </div>
+                    <div class="d-none d-md-block p-lg-5"></div>
+                </div>
+                <div class="col d-none d-md-block"></div>
+            </div>
+            <div class="primary bd-1px"></div>
+            <div id="myself" class="row align-items-center h-100">
+                <div class="col text-center text-md-start d-md-flex flex-md-row py-5">
                     <div>
                         <h1 class="fw-bolder">About me.</h1>
-                        <p>This is a simple description about this testing website.</p>
+                        <p>I'm an artist and developer interested in creating applications and games that has <b>value</b>. I'm inspired by and aspired to example <a href="https://www.valvesoftware.com" target="_blank">Valve's</a> philosophy at work.</p>
+                        <p>I love musics, mangas, motion pictures, and video games. My main goal is to create works that will leave marks in people's mind.</p>
+                        <p><i>@dinnoyow</i> is a nickname I use for my internet-related activities and account usernames. It is used for anonimity.</p>
+                        <div class="social-medias"></div>
                     </div>
+                    <div class="d-none d-md-block p-lg-5"></div>
                 </div>
-            </div>
-            <div class="py-4">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dicta autem officia ipsam libero et, iusto praesentium consequuntur, vero sunt accusamus numquam deserunt voluptatum illum labore veritatis reprehenderit nam laboriosam esse.</p>
+                <div class="col d-none d-md-block"></div>
             </div>
         </div>
         <div class="container h-100" id="gallery">
@@ -135,30 +148,38 @@
                     <span class="small d-none d-md-block p-1 text-shadow-1">Coded with:</span>
                     <span class="p-1 d-block d-md-none bi bi-code-slash"></span>
                     <a href="https://getbootstrap.com/" target="_blank" class="p-1 text-secondary"><span class="bi bi-bootstrap-fill"></span></a>
+                    <span class="small text-shadow-1">,</span>
                     <a 
                         href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
                         class="text-secondary text-decoration-none small p-1 text-shadow-1"
                         style="transform: translatey(-1px);"
                         >
-                        , sass
+                        sass
                     </a>
+                    <span class="small text-shadow-1">, &</span>
                     <a 
                         href="https://jwanner83.github.io/follow-js/index.html" target="_blank"
                         class="text-secondary text-decoration-none small p-1 text-shadow-1"
                         style="transform: translatey(-1px);"
                         >
-                        , follow.js
+                        follow.js
                     </a>
                 </div>
-                <div class="col text-end text-secondary d-flex flex-row align-items-center justify-content-end">
-                    <a href="https://github.com/dinnoyow" target="_blank" class="p-1 text-secondary"><span class="bi bi-github"></span></a>
-                    <a href="https://x.com/dinnoyow" target="_blank" class="p-1 text-secondary"><span class="bi bi-twitter"></span></a>
-                    <a href="#" class="p-1 text-secondary"><span class="bi bi-discord"></span></a>
-                    <a href="https://www.instagram.com/dinnoyow/" target="_blank" class="p-1 text-secondary"><span class="bi bi-instagram"></span></a>
+                <div class="col text-end text-secondary d-flex flex-row align-items-center justify-content-end social-medias">
                 </div>
             </div>
         </div>
     </footer>
+    <div id="clipboard-alert" class="modal fade" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content primary bg bd-1px">
+                <div class="modal-body d-flex flex-row align-items-center justify-content-between">
+                    <p class="small m-0">Discord username copied to clipboard.</p>
+                    <button type="button" class="btn btn-close p-0 m-0" data-bs-dismiss="modal"></button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         let current_selected = ""
         let css_hider = "d-none"
@@ -209,6 +230,23 @@
             }
             return result
         }
+        function copyToClipboard(text) {
+            navigator.clipboard.writeText(text)
+        }
+        function displaySocialMedia() {
+            let elements = document.getElementsByClassName("social-medias")
+            for (let i = 0; i < elements.length; i++) {
+                elements[i].innerHTML = `
+                <ul class="text-center d-flex flex-row list-unstyled m-0">
+                    <li><a href="https://github.com/dinnoyow" target="_blank" class="p-1 text-secondary"><span class="bi bi-github"></span></a></li>
+                    <li><a href="https://x.com/dinnoyow" target="_blank" class="p-1 text-secondary"><span class="bi bi-twitter"></span></a></li>
+                    <li><a href="#" class="p-1 text-secondary" data-bs-toggle="modal" data-bs-target="#clipboard-alert"><span class="bi bi-discord"></span></a></li>
+                    <li><a href="https://www.instagram.com/dinnoyow/" target="_blank" class="p-1 text-secondary"><span class="bi bi-instagram"></span></a></li>
+                </ul>
+                `;
+            }
+        }
+        displaySocialMedia()
         show("home")
     </script>
     <script src="node-modules/follow-js/dist/follow.min.js" data-follow-auto></script>
